2008-01-28  Alexander Larsson  <alexl@redhat.com>

        * daemon/Makefile.am:
        * daemon/daemon-main.c:
        * daemon/main.c:
	Enable translations for daemons and some l10n
	fixes. Patch from Luca Ferretti.

2008-01-24  Matthias Clasen  <mclasen@redhat.com>

	* daemon/gvfsbackendsmbbrowse.c
	(get_file_info_from_entry): Replace : by :: in 
	smb::comment, too.

2008-01-24  Alexander Larsson  <alexl@redhat.com>

        * configure.ac:
	Update intltool req for po/LINGUAS

2008-01-24  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalvolumemonitor.c:
	Remove debug spew.
	
        * hal/ghaldrive.c:
        * hal/ghalvolume.c:
	Implement identifier getters
	
        * programs/gvfs-mount.c:
	Show identifiers

2008-01-24  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsdaemon.c:
	Indentation fix
	
        * hal/ghaldrive.[ch]:
        * hal/hal-device.c:
        * hal/ghalvolume.c:
        * hal/ghalmount.c:
	Clean up coding style
	
        * hal/ghalvolumemonitor.[ch]:
	Clean up coding style
	Don't show drives if we're ignoring all their
	volumes (and there are volumes)
	
        * hal/hal-pool.c:
	Clean up coding style
	Actually look at cap_only.
	Free private dbus_connection on error

2008-01-24  Bastien Nocera  <hadess@hadess.net>

	* programs/Makefile.am:
	* programs/gvfs-mkdir.c: (main): Add a test mkdir program

2008-01-23  Bastien Nocera  <hadess@hadess.net>

	* client/test-uri-utils.c: (main):
	* client/Makefile.am: Add test program for the
	functions in gvfsuriutils.c

	* client/gvfsuriutils.c: (g_vfs_decode_uri):
	Fix parsing of IPv6 URIs where the host is in brackets

2008-01-23  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
        (add_extra_trash_info):
	Use -, not _ in attribute names

2008-01-23  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendtrash.c:
        (add_extra_trash_info):
	Use :: to delimit namespace for trash attributes
